--- a/AllBuyBack/pom.xml
+++ b/AllBuyBack/pom.xml
@@ -14,6 +14,13 @@
     </properties>
 
     <dependencies>
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery-ui -->
+		<dependency>
+		    <groupId>org.webjars.bower</groupId>
+		    <artifactId>jquery-ui</artifactId>
+		    <version>1.12.1</version>
+		</dependency>
+
 	    <!-- https://mvnrepository.com/artifact/javax.el/javax.el-api -->
 		<dependency>
 		    <groupId>javax.el</groupId>
@@ -28,12 +35,13 @@
 		    <version>3.3.7-1</version>
 		</dependency>
     
-    	<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
 		<dependency>
-    		<groupId>org.json</groupId>
-    		<artifactId>json</artifactId>
-    		<version>20090211</version>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery -->
 		<dependency>
     		<groupId>org.webjars.bower</groupId>
