--- a/AllBuyBack/pom.xml
+++ b/AllBuyBack/pom.xml
@@ -55,7 +55,11 @@
     		<artifactId>spring-webmvc</artifactId>
     		<version>4.3.9.RELEASE</version>
 		</dependency>
-    
+    	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>4.3.9.RELEASE</version>
+		</dependency>
     	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 		<dependency>
     		<groupId>org.hibernate</groupId>
