刪去一些用不到的東西

--- a/AllBuyBack/src/main/webapp/WEB-INF/web.xml
+++ b/AllBuyBack/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,7 @@
 	<!-- Map all requests to the DispatcherServlet for handling -->
 	<servlet-mapping>
 		<servlet-name>mvc</servlet-name>
-		<url-pattern>*.controller</url-pattern>
+		<url-pattern>*.SPRINGcontroller</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>mvc</servlet-name>
