--- a/AllBuyBack/pom.xml
+++ b/AllBuyBack/pom.xml
@@ -14,6 +14,13 @@
     </properties>
 
     <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.webjars.bower/sweetalert -->
+		<dependency>
+		    <groupId>org.webjars.bower</groupId>
+		    <artifactId>sweetalert</artifactId>
+		    <version>1.1.3</version>
+		</dependency>
+    
 		<!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery-ui -->
 		<dependency>
 		    <groupId>org.webjars.bower</groupId>
