--- a/AllBuyBack/pom.xml
+++ b/AllBuyBack/pom.xml
@@ -14,6 +14,13 @@
     </properties>
 
     <dependencies>
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		    
     <!-- https://mvnrepository.com/artifact/org.webjars.bower/sweetalert -->
 		<dependency>
 		    <groupId>org.webjars.bower</groupId>
