--- a/AllBuyBack/src/main/webapp/WEB-INF/web.xml
+++ b/AllBuyBack/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,13 @@
     <servlet-name>mvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
+    <multipart-config>
+		<max-file-size>5242880000</max-file-size>
+		<max-request-size>5242880000</max-request-size>
+		<file-size-threshold>0</file-size-threshold>
+	</multipart-config>
   </servlet>
+  
   <servlet-mapping>
     <servlet-name>mvc</servlet-name>
     <url-pattern>*.SPRINGcontroller</url-pattern>
